--- a/index.html
+++ b/index.html
@@ -235,21 +235,21 @@
               <div class="col">
                 <div class="row design-faculty-bar align_center">
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=afd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=cgd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dre" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
@@ -257,14 +257,14 @@
                   </div>
 
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dgd"
+                    <a href="./discipline-wise-student-list.html"
                       ><span class="d-inline-block rounded-pill df-name"
                         >IT INTEGRATED</span
                       ></a
                     >
                   </div>
                   <div class="col-3 rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
@@ -272,7 +272,7 @@
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >SORT BY GUIDE</span
                       ></a
@@ -282,7 +282,7 @@
               </div>
             </div>
             <div class="col-1 text-right my-auto">
-              <a href="https://youngdesigners.nid.edu/"
+              <a href=""
                 ><img
                   src="./images/nid-logo.png"
                   alt=""
@@ -543,7 +543,9 @@
     <div class="container-fluid p-5">
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
-        <a href=""> <div class="col text-right text-dark">← Go Back</div></a>
+        <a href="./index.html">
+          <div class="col text-right text-dark">← Go Back</div></a
+        >
       </div>
     </div>
 
