--- a/project-detail.html
+++ b/project-detail.html
@@ -57,21 +57,21 @@
               <div class="col">
                 <div class="row design-faculty-bar align_center">
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=afd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=cgd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dre" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dgd"
+                    <a href="./discipline-wise-student-list.html"
                       ><span
                         class="d-inline-block text-light rounded-pill bg-itd df-name"
                         >IT INTEGRATED</span
@@ -87,7 +87,7 @@
                     >
                   </div>
                   <div class="col-3 rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
@@ -95,7 +95,7 @@
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >SORT BY GUIDE</span
                       ></a
@@ -119,37 +119,36 @@
         <div class="col-2 p-3 discipline-bar border_r_bottom_s">
           <div class="row justify-content-center">
             <div class="col text-center bg-itd rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 >Interaction Design</a
               >
               <b> > </b>
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 >Madhav Baliga</a
               >
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd">
-              </a>
+              <a href="./discipline-wise-student-list.html?q=intd"> </a>
             </div>
           </div>
         </div>
         <div class="col-7 p-3 discipline-bar bg-itd border_r_bottom">
           <div class="row justify-content-md-center">
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=dgd"
+              <a href="./discipline-wise-student-list.html"
                 >Digital Game Design</a
               >
             </div>
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=id"
+              <a href="./discipline-wise-student-list.html?q=id"
                 >Information Design</a
               >
             </div>
             <div class="col text-center current active-itd rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 >Interaction Design</a
               >
             </div>
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=nmd"
+              <a href="./discipline-wise-student-list.html?q=nmd"
                 >New Media Design</a
               >
             </div>
@@ -164,7 +163,7 @@
             <div class="col text-ceneter">
               <div class="square-img">
                 <img
-                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
+                  src="./images/S1725105-Karan-Darji.jpg"
                   class="profile-pic shadow"
                   data-savee-read="true"
                 />
@@ -254,7 +253,9 @@
     <div class="container-fluid p-5">
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
-        <a href=""> <div class="col text-right text-dark">← Go Back</div></a>
+        <a href="./index.html">
+          <div class="col text-right text-dark">← Go Back</div></a
+        >
       </div>
     </div>
 
