--- a/discipline-wise-student-list.html
+++ b/discipline-wise-student-list.html
@@ -57,21 +57,21 @@
               <div class="col">
                 <div class="row design-faculty-bar align_center">
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=afd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=cgd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dre" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dgd"
+                    <a href="./discipline-wise-student-list.html"
                       ><span
                         class="d-inline-block text-light rounded-pill bg-itd df-name"
                         >IT INTEGRATED</span
@@ -87,7 +87,7 @@
                     >
                   </div>
                   <div class="col-3 rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
@@ -95,7 +95,7 @@
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >SORT BY GUIDE</span
                       ></a
@@ -105,7 +105,7 @@
               </div>
             </div>
             <div class="col-1 text-right my-auto">
-              <a href="https://youngdesigners.nid.edu/"
+              <a href=""
                 ><img
                   src="./images/nid-logo.png"
                   alt=""
@@ -119,22 +119,22 @@
         <div class="container discipline-bar">
           <div class="row justify-content-md-center">
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=dgd"
+              <a href="./discipline-wise-student-list.html"
                 >Digital Game Design</a
               >
             </div>
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=id"
+              <a href="./discipline-wise-student-list.html?q=id"
                 >Information Design</a
               >
             </div>
             <div class="col text-center current active-itd rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 >Interaction Design</a
               >
             </div>
             <div class="col text-center current rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=nmd"
+              <a href="./discipline-wise-student-list.html?q=nmd"
                 >New Media Design</a
               >
             </div>
@@ -321,18 +321,9 @@
         </div>
       </div>
 
-      <script
-        src="https://youngdesigners.nid.edu/js21/jquery-3.3.1.min.js"
-        type="text/javascript"
-      ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/bootstrap-4.3.1.min.js"
-        type="text/javascript"
-      ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/popper-1.14.7.min.js"
-        type="text/javascript"
-      ></script>
+      <script src="js21/jquery-3.3.1.min.js" type="text/javascript"></script>
+      <script src="js21/bootstrap-4.3.1.min.js" type="text/javascript"></script>
+      <script src="js21/popper-1.14.7.min.js" type="text/javascript"></script>
       <script type="text/javascript">
         $(document).ready(function (e) {
           var activeurl = window.location;
@@ -406,7 +397,9 @@
     <div class="container-fluid p-5">
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
-        <a href=""> <div class="col text-right text-dark">← Go Back</div></a>
+        <a href="./index.html">
+          <div class="col text-right text-dark">← Go Back</div></a
+        >
       </div>
     </div>
 
