--- a/guide-list.html
+++ b/guide-list.html
@@ -57,21 +57,21 @@
               <div class="col">
                 <div class="row design-faculty-bar align_center">
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=afd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=cgd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dre" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
@@ -79,14 +79,14 @@
                   </div>
 
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dgd"
+                    <a href="./discipline-wise-student-list.html"
                       ><span class="d-inline-block rounded-pill df-name"
                         >IT INTEGRATED</span
                       ></a
                     >
                   </div>
                   <div class="col-3 rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
@@ -94,7 +94,7 @@
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span
                         class="d-inline-block df-name rounded-pill text-light bg-sort"
                         >SORT BY GUIDE</span
@@ -105,7 +105,7 @@
               </div>
             </div>
             <div class="col-1 text-right my-auto">
-              <a href="https://youngdesigners.nid.edu/"
+              <a href=""
                 ><img
                   src="./images/nid-logo.png"
                   alt=""
@@ -988,23 +988,19 @@
         </div>
       </div>
       <script
-        src="https://youngdesigners.nid.edu/js21/jquery-3.3.1.slim.min.js"
+        src="js21/jquery-3.3.1.slim.min.js"
         type="text/javascript"
       ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/bootstrap-4.3.1.min.js"
-        type="text/javascript"
-      ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/popper-1.14.7.min.js"
-        type="text/javascript"
-      ></script>
+      <script src="js21/bootstrap-4.3.1.min.js" type="text/javascript"></script>
+      <script src="js21/popper-1.14.7.min.js" type="text/javascript"></script>
     </div>
 
     <div class="container-fluid p-5">
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
-        <a href=""> <div class="col text-right text-dark">← Go Back</div></a>
+        <a href="./index.html">
+          <div class="col text-right text-dark">← Go Back</div></a
+        >
       </div>
     </div>
 
