--- a/guide-wise-student-list.html
+++ b/guide-wise-student-list.html
@@ -57,21 +57,21 @@
               <div class="col">
                 <div class="row design-faculty-bar align_center">
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=afd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=cgd" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dre" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block rounded-pill df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
@@ -79,14 +79,14 @@
                   </div>
 
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=dgd"
+                    <a href="./discipline-wise-student-list.html"
                       ><span class="d-inline-block rounded-pill df-name"
                         >IT INTEGRATED</span
                       ></a
                     >
                   </div>
                   <div class="col-3 rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
@@ -94,7 +94,7 @@
                     >
                   </div>
                   <div class="col rounded-pill text-center">
-                    <a href="discipline.php?q=td" class=""
+                    <a href="./discipline-wise-student-list.html" class=""
                       ><span class="d-inline-block df-name rounded-pill bg-sort"
                         >SORT BY GUIDE</span
                       ></a
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="col-1 text-right my-auto">
-              <a href="https://youngdesigners.nid.edu/"
+              <a href=""
                 ><img
                   src="./images/nid-logo.png"
                   alt=""
@@ -118,15 +118,14 @@
         <div class="col-2 p-3 discipline-bar border_r_bottom_s">
           <div class="row justify-content-center">
             <div class="col text-center bg-itd rounded-pill">
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 ><b>Guide:</b></a
               >
               <b> > </b>
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd"
+              <a href="./discipline-wise-student-list.html?q=intd"
                 >Chakradhar</a
               >
-              <a href="https://youngdesigners.nid.edu/discipline.php?q=intd">
-              </a>
+              <a href="./discipline-wise-student-list.html?q=intd"> </a>
             </div>
           </div>
         </div>
@@ -332,17 +331,11 @@
         </div>
       </div>
       <script
-        src="https://youngdesigners.nid.edu/js21/jquery-3.3.1.slim.min.js"
+        src="js21/jquery-3.3.1.slim.min.js"
         type="text/javascript"
       ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/bootstrap-4.3.1.min.js"
-        type="text/javascript"
-      ></script>
-      <script
-        src="https://youngdesigners.nid.edu/js21/popper-1.14.7.min.js"
-        type="text/javascript"
-      ></script>
+      <script src="js21/bootstrap-4.3.1.min.js" type="text/javascript"></script>
+      <script src="js21/popper-1.14.7.min.js" type="text/javascript"></script>
       <script type="text/javascript">
         $(document).ready(function (e) {
           $(".navbar-toggler-icon").click(function () {
@@ -371,7 +364,9 @@
     <div class="container-fluid p-5">
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
-        <a href=""> <div class="col text-right text-dark">← Go Back</div></a>
+        <a href="./index.html">
+          <div class="col text-right text-dark">← Go Back</div></a
+        >
       </div>
     </div>
 
