--- a/discipline-wise-student-list.html
+++ b/discipline-wise-student-list.html
@@ -163,6 +163,8 @@
               <div class="card-body">
                 <div class="card-top-text">
                   Enterprise UX for Big Data Analytics and Consumption
+                  Enterprise UX for Big Data Analytics and Consumption
+                  Enterprise UX for Big Data Analytics and Consumption
                 </div>
                 <div class="card-bottom-text">Bharat Bhusan Apat</div>
               </div>
