--- a/guide-list.html
+++ b/guide-list.html
@@ -6,10 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      rel="preload"
+      href="Mona-Sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="css/font-awesome.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="./css/yd22.v1.css" />
+
+    <title>YD22 :: Landing</title>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script type="module">
       const lenis = new Lenis({
@@ -36,67 +45,75 @@
 
       requestAnimationFrame(raf);
     </script>
-
-    <title>YD22 :: Landing</title>
   </head>
 
   <body>
     <nav class="desktop-menu">
       <div>
         <div class="container-fluid py-3 px-5 bg-g">
-          <div class="row justify-content-between">
-            <div class="col-1 text-left my-auto">
-              <a href="https://nid.edu/"
-                ><img
-                  src="./images/conv42.png"
-                  alt=""
-                  style="width: 6vw; height: auto"
-              /></a>
+          <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-around align-items-center">
+              <div class="col text-left my-auto">
+                <a href="./index.html"
+                  ><img
+                    src="./images/conv42.png"
+                    alt=""
+                    style="width: 6vw; height: auto"
+                /></a>
+              </div>
+              <div>•</div>
+              <div class="col text-right my-auto">
+                <a href=""
+                  ><img
+                    src="./images/nid-logo.png"
+                    alt=""
+                    style="width: 8vw; height: auto; filter: invert(1)"
+                /></a>
+              </div>
             </div>
             <div class="col-9">
               <div class="col">
                 <div class="row design-faculty-bar align_center">
-                  <div class="col rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block rounded-pill df-name"
+                      ><span class="d-inline-block df-name hr-cmd"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
                   </div>
-                  <div class="col rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block rounded-pill df-name"
+                      ><span class="d-inline-block df-name hr-idd"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
                   </div>
-                  <div class="col rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block rounded-pill df-name"
+                      ><span class="d-inline-block df-name hr-ind"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
                     >
                   </div>
 
-                  <div class="col rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html"
-                      ><span class="d-inline-block rounded-pill df-name"
+                      ><span class="d-inline-block df-name hr-itd"
                         >IT INTEGRATED</span
                       ></a
                     >
                   </div>
-                  <div class="col-3 rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name rounded-pill"
+                      ><span class="d-inline-block df-name hr-txd"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
                       ></a
                     >
                   </div>
-                  <div class="col rounded-pill text-center">
+                  <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span
-                        class="d-inline-block df-name rounded-pill text-light bg-sort"
+                      ><span class="d-inline-block df-name hr-sort"
                         >SORT BY GUIDE</span
                       ></a
                     >
@@ -104,19 +121,93 @@
                 </div>
               </div>
             </div>
-            <div class="col-1 text-right my-auto">
-              <a href=""
-                ><img
-                  src="./images/nid-logo.png"
-                  alt=""
-                  style="width: 8vw; height: auto; filter: invert(1)"
-              /></a>
+
+            <div class="toggle-btn">
+              <span class="one"></span>
+              <span class="two"></span>
             </div>
           </div>
         </div>
       </div>
     </nav>
+    <div class="menu" data-lenis-prevent>
+      <img
+        style="width: 30%; padding-top: 5vh"
+        src="./images/conv42.png"
+        alt=""
+      />
+      <div class="data">
+        <ul id="accordion" class="accordion">
+          <li>
+            <div class="link hr-cmd">
+              <span>COMMUNICATION DESIGN</span> <span>+</span>
+            </div>
 
+            <ul class="submenu">
+              <li><a href="#">Animation Film Design</a></li>
+              <li><a href="#">Exhibition Design</a></li>
+              <li><a href="#">Film & Video Communication</a></li>
+              <li><a href="#">Graphic Design </a></li>
+              <li><a href="#">Photography Design </a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="link hr-idd">
+              <span>INDUSTRIAL DESIGN</span> <span>+</span>
+            </div>
+
+            <ul class="submenu">
+              <li><a href="#">Ceramic & Glass Design </a></li>
+              <li><a href="#">Furniture Design </a></li>
+              <li><a href="#">Furniture & Interior Design </a></li>
+              <li><a href="#">Product Design </a></li>
+              <li><a href="#">Transportation & Automobile Design </a></li>
+              <li><a href="#">Toy & Game Design </a></li>
+              <li><a href="#">Universal Design </a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="link hr-txd">
+              <span>INTERDISCIPLINARY DESIGN</span> <span>+</span>
+            </div>
+            <ul class="submenu">
+              <li><a href="#">Design for Retail Experience </a></li>
+              <li><a href="#">Strategic Design Management </a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="link hr-itd">
+              <span>IT INTEGRATED</span> <span>+</span>
+            </div>
+            <ul class="submenu">
+              <li><a href="#">Digital Game Design </a></li>
+              <li><a href="#">Information Design </a></li>
+              <li><a href="#">Interaction Design </a></li>
+              <li><a href="#">New Media Design </a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="link hr-ind">
+              <span>TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY DESIGN</span>
+              <span>+</span>
+            </div>
+            <ul class="submenu">
+              <li><a href="#">Apparel Design </a></li>
+              <li><a href="#">Lifestyle Accessory Design </a></li>
+              <li><a href="#">Textile Design </a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="link hr-sort">
+              <span>SORT BY GUIDE</span> <span>+</span>
+            </div>
+            <ul class="submenu">
+              <li><a href="#">Guides</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div
       class="container-fluid mt-4 project-list"
       style="padding: 15vh 5vw 0 5vw"
@@ -999,13 +1090,13 @@
       <div class="row justify-content-between rounded-pill text-dark p-3 bg-g">
         <a href=""><div class="col text-dark">Credits</div></a>
         <a href="./index.html">
-          <div class="col text-right text-dark">← Go Back</div></a
+          <div class="col text-right text-dark">← Go to Home Page</div></a
         >
       </div>
     </div>
 
     <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      src="https://code.jquery.com/jquery-3.3.1.js"
       type="text/javascript"
     ></script>
     <script
@@ -1032,6 +1123,81 @@
         prevScrollPos = currentScrollPos;
       });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script>
+      var t1 = new TimelineMax({ paused: true });
+
+      t1.to(".one", 0.1, {
+        y: 6,
+        rotation: 45,
+        ease: Expo.easeInOut,
+      });
+
+      t1.to(".two", 0.1, {
+        y: -6,
+        rotation: -45,
+        ease: Expo.easeInOut,
+        delay: -0.1,
+      });
+      t1.to(".menu", 0.3, {
+        top: "0%",
+        ease: Expo.easeInOut,
+        delay: -0.3,
+      });
+
+      t1.staggerFrom(
+        ".menu ul li div",
+        0.2,
+        { x: 100, opacity: 0, ease: Expo.easeInOut },
+        0.08
+      );
+
+      t1.reverse();
+      $(document).on("click", ".toggle-btn", function () {
+        t1.reversed(!t1.reversed());
+      });
+
+      t1.reverse();
+      $(document).on("click", "a", function () {
+        t1.reversed(!t1.reversed());
+      });
+
+      $(function () {
+        var Accordion = function (el, multiple) {
+          this.el = el || {};
+          this.multiple = multiple || false;
+
+          // Variables privadas
+          var links = this.el.find(".link");
+          // Evento
+          links.on(
+            "click",
+            { el: this.el, multiple: this.multiple },
+            this.dropdown
+          );
+        };
+
+        Accordion.prototype.dropdown = function (e) {
+          var $el = e.data.el;
+          ($this = $(this)), ($next = $this.next());
+
+          $next.slideToggle();
+          $this.parent().toggleClass("open");
+
+          if (!e.data.multiple) {
+            $el
+              .find(".submenu")
+              .not($next)
+              .slideUp()
+              .parent()
+              .removeClass("open");
+          }
+        };
+
+        var accordion = new Accordion($("#accordion"), false);
+      });
+    </script>
+
     <script type="text/javascript">
       $(document).ready(function () {});
     </script>
